--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
+buildscript {
+    ext{
+        nav_version = "2.5.3"
+        lifecycle_version = "2.5.1"
+        coroutines_version = "1.6.4"
+    }
+    dependencies {
+        //SafeArgs
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+    }
+}
+
+
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
