--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
 
     //Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
