Modified the sign in process adding signin as a patient and as a doctor, deleted signUpRole fragment and modified the auth navgraph to go with the changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
     // Coil
     implementation("io.coil-kt:coil:$coil_version")
 
+    //Android GIF
+    implementation ("pl.droidsonroids.gif:android-gif-drawable:$android_gif_version")
+
 }
