--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         android_gif_version = "1.2.25"
         firebase_version="31.5.0"
         gms_version="4.3.15"
+        retrofit_version="2.9.0"
+        hilt_version="2.44"
     }
     dependencies {
         //SafeArgs
@@ -28,4 +30,5 @@ plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
