--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
         espressoVersion = '3.5.1'
         retrofit_version="2.9.0"
         hilt_version="2.44"
+        gson_version="2.8.7"
     }
     dependencies {
         //SafeArgs
