--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,12 @@ dependencies {
     //Gson
     implementation "com.google.code.gson:gson:$gson_version"
 
+    //EasyPermissions
+    implementation "pub.devrel:easypermissions:$easypermissions_version"
+
+    //Worker
+    implementation "androidx.work:work-runtime-ktx:$worker_version"
+
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
