--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ buildscript {
         retrofit_version="2.9.0"
         hilt_version="2.44"
         gson_version="2.8.7"
+        easypermissions_version="3.0.0"
+        worker_version="2.8.1"
     }
     dependencies {
         //SafeArgs
