--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,11 @@ dependencies {
     //Worker
     implementation "androidx.work:work-runtime-ktx:$worker_version"
 
+    //qr code scanner
+    implementation "com.journeyapps:zxing-android-embedded:$zxing_android_embedded_version"
+    implementation "com.google.zxing:core:$zxing_core_version"
+
+
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
