--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ buildscript {
         gson_version="2.8.7"
         easypermissions_version="3.0.0"
         worker_version="2.8.1"
+        zxing_android_embedded_version="4.3.0"
+        zxing_core_version="3.3.0"
+
     }
     dependencies {
         //SafeArgs
