--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
         worker_version="2.8.1"
         zxing_android_embedded_version="4.3.0"
         zxing_core_version="3.3.0"
+        room_version = "2.5.1"
 
     }
     dependencies {
