--- a/data/build.gradle
+++ b/data/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     // Coroutines support for Room (optional, if you are using coroutines)
     implementation "androidx.room:room-ktx:$room_version"
 
-    // Dependencies for local unit tests
+/*    // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
     testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
@@ -82,5 +82,5 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     testImplementation "com.google.truth:truth:$truthVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"*/
 }
