--- a/shifaa_scanner/build.gradle
+++ b/shifaa_scanner/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.syncdev.shifaa_scanner'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.syncdev.shifaa_scanner"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -44,18 +44,17 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.appcompat
+    implementation libs.material
+    implementation libs.androidx.constraintlayout
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.junit
+    androidTestImplementation libs.androidx.espresso.core
 
     //QR code scanner
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
-    implementation 'com.google.zxing:core:3.3.0'
+    implementation libs.bundles.zxing
 
     // Gson
-    implementation "com.google.code.gson:gson:2.8.7"
+    implementation libs.gson
 }
