--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 
 buildscript {
     ext{
-        nav_version = "2.5.3"
+        nav_version = "2.7.3"
         lifecycle_version = "2.5.1"
         coroutines_version = "1.6.4"
         coil_version="2.2.2"
@@ -24,13 +24,13 @@ buildscript {
         androidXTestRulesVersion = '1.5.0'
         espressoVersion = '3.5.1'
         retrofit_version="2.9.0"
-        hilt_version="2.44"
+        hilt_version="2.48"
         gson_version="2.8.7"
         easypermissions_version="3.0.0"
         worker_version="2.8.1"
         zxing_android_embedded_version="4.3.0"
         zxing_core_version="3.3.0"
-        room_version = "2.5.1"
+        room_version = "2.5.2"
 
     }
     dependencies {
@@ -50,5 +50,6 @@ plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
-    id("com.google.dagger.hilt.android") version "2.44" apply false
+    id("com.google.dagger.hilt.android") version "2.48" apply false
+    id("com.google.devtools.ksp") version "1.9.0-1.0.13" apply false
 }
