--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin)
+    alias(libs.plugins.hilt)
+    alias(libs.plugins.ksp)
     id("androidx.navigation.safeargs.kotlin")
-    id 'com.google.gms.google-services'
+    id("com.google.gms.google-services")
     id("kotlin-kapt")
-    id("com.google.devtools.ksp")
-    id("com.google.dagger.hilt.android")
-
 }
 
 android {
@@ -90,7 +89,7 @@ dependencies {
     ksp(libs.hilt.compiler)
 
     //Android GIF
-    implementation (libs.android.gif.drawable)
+    implementation(libs.android.gif.drawable)
 
     // Firebase
     implementation platform(libs.firebase.bom)
