--- a/build.gradle
+++ b/build.gradle
@@ -2,41 +2,11 @@
 
 
 buildscript {
-    ext{
-        nav_version = "2.7.3"
-        lifecycle_version = "2.5.1"
-        coroutines_version = "1.6.4"
-        coil_version="2.2.2"
-        android_gif_version = "1.2.25"
-        firebase_version="31.5.0"
-        gms_version="4.3.15"
-        fragmentVersion = '1.6.0-alpha03'
-        mockitoVersion = '2.8.9'
-        dexMakerVersion = '2.12.1'
-        roomVersion = '2.5.1'
-        truthVersion = '1.1.3'
-        junitVersion = '4.13.2'
-        androidXTestCoreVersion = '1.5.0'
-        robolectricVersion = '4.9'
-        androidXTestExtKotlinRunnerVersion = '1.1.5'
-        archTestingVersion = '2.2.0'
-        hamcrestVersion = '1.3'
-        androidXTestRulesVersion = '1.5.0'
-        espressoVersion = '3.5.1'
-        retrofit_version="2.9.0"
-        hilt_version="2.48"
-        gson_version="2.8.7"
-        easypermissions_version="3.0.0"
-        worker_version="2.8.1"
-        zxing_android_embedded_version="4.3.0"
-        zxing_core_version="3.3.0"
-        room_version = "2.5.2"
 
-    }
     dependencies {
-        //SafeArgs
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
-        classpath "com.google.gms:google-services:$gms_version"
+
+        classpath(libs.safe.args)
+        classpath(libs.google.services)
 
     }
     repositories {
@@ -47,9 +17,9 @@ buildscript {
 
 
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
-    id("com.google.dagger.hilt.android") version "2.48" apply false
-    id("com.google.devtools.ksp") version "1.9.0-1.0.13" apply false
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.kotlin) apply false
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.hilt) apply false
+    alias(libs.plugins.ksp) apply false
 }
